--- a/src/app/main/sidebar/sidebar.component.scss
+++ b/src/app/main/sidebar/sidebar.component.scss
@@ -416,7 +416,7 @@
 
 
 /*------------------------------default theme---------------------------------*/
-$bg-sidebar-wrapper : rgba(183, 206, 250, 0.1);
+$bg-sidebar-wrapper : #F9FDFF;
 $border-color : #2b2b2b;
 $footer-top-border-color :#3a3a3a;
 $color:#106DB6;
