--- a/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
@@ -51,7 +51,7 @@
               </div>
             </div>
           </div>
-          <div class="add_click" (click)="addUserView()"><a class="add_link"><i class="fa fa-plus-circle"></i> Thêm người xem xét</a></div>
+          <div class="add_click"><a class="add_link" (click)="addUserView()"><i class="fa fa-plus-circle"></i> Thêm người xem xét</a></div>
         </div>
 
         <!-- User sign -->
@@ -137,7 +137,7 @@
               </div>
             </div>
           </div>
-          <div class="add_click" (click)="addUserSign()"><a class="add_link"><i class="fa fa-plus-circle"></i> Thêm người ký</a></div>
+          <div class="add_click"><a class="add_link" (click)="addUserSign()"><i class="fa fa-plus-circle"></i> Thêm người ký</a></div>
         </div>
 
         <!-- User document -->
@@ -210,7 +210,7 @@
               </div>
             </div>
           </div>
-          <div class="add_click" (click)="addUserDoc()"><a class="add_link"><i class="fa fa-plus-circle"></i> Thêm văn thư</a></div>
+          <div class="add_click"><a class="add_link" (click)="addUserDoc()"><i class="fa fa-plus-circle"></i> Thêm văn thư</a></div>
         </div>
       </div>
     </div>
@@ -285,7 +285,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="add_click" (click)="addPartnerLead(a)"><a class="add_link"><i class="fa fa-plus-circle"></i> Thêm người điều phối</a></div>
+                  <div class="add_click"><a class="add_link" (click)="addPartnerLead(a)"><i class="fa fa-plus-circle"></i> Thêm người điều phối</a></div>
                 </div>
 
                 <!-- Partner view -->
@@ -327,7 +327,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="add_click" (click)="addPartnerView(a)"><a class="add_link"><i class="fa fa-plus-circle"></i> Thêm người xem xét</a></div>
+                  <div class="add_click"><a class="add_link" (click)="addPartnerView(a)"><i class="fa fa-plus-circle"></i> Thêm người xem xét</a></div>
                 </div>
 
                 <!-- Partner sign -->
@@ -413,7 +413,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="add_click" (click)="addPartnerSign(a)"><a class="add_link"><i class="fa fa-plus-circle"></i> Thêm người ký</a></div>
+                  <div class="add_click"><a class="add_link" (click)="addPartnerSign(a)"><i class="fa fa-plus-circle"></i> Thêm người ký</a></div>
                 </div>
 
                 <!-- Partner document -->
@@ -486,7 +486,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="add_click" (click)="addPartnerDoc(a)"><a class="add_link"><i class="fa fa-plus-circle"></i> Thêm văn thư</a></div>
+                  <div class="add_click"><a class="add_link" (click)="addPartnerDoc(a)"><i class="fa fa-plus-circle"></i> Thêm văn thư</a></div>
                 </div>
               </div>
 
@@ -576,20 +576,18 @@
                       </div>
                     </div>
                   </div>
-                  <div class="add_click" (click)="addPartnerUser(a)"><a class="add_link"><i class="fa fa-plus-circle"></i> Thêm người ký</a></div>
+                  <div class="add_click"><a class="add_link" (click)="addPartnerUser(a)"><i class="fa fa-plus-circle"></i> Thêm người ký</a></div>
                 </div>
               </div>
             </div>
           </div>
         </div>
-
       </div>
-
     </div>
     <div class="row">
       <div class="col-md-1"></div>
       <div class="col-md-11">
-        <div class="add_click" (click)="addPartner()"><a class="add_link"><i class="fa fa-plus-circle"></i> Thêm đối tác</a></div>
+        <div class="add_click"><a class="add_link" (click)="addPartner()"><i class="fa fa-plus-circle"></i> Thêm đối tác</a></div>
       </div>
     </div>
   </form>
