--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -76,21 +76,32 @@ header {
 .social-icons {
   display: flex;
   align-items: center;
+  cursor: pointer;
 }
+
 
 .social-icons span,
-.social-icons div {
+.social-icons span {
   margin-left: 1.2rem;
 }
-
-.social-icons div {
-  height: 38px;
-  width: 38px;
+.social-icons .notification_login{
+  height: 20px;
+  width: 20px;
   background-size: cover;
   background-repeat: no-repeat;
-  background-image: url(../../assets/img/user_login.png);
-  border-radius: 50%;
-  cursor: pointer;
+  background-image: url(../../assets/img/notification_login.svg);
+}
+.social-icons .user_login {
+  height: 20px;
+  width: 20px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: url(../../assets/img/user_login.svg);
+  //border-radius: 50%;
+}
+.social-icons .label{
+  color: #106DB6;
+  margin-left: 10px;
 }
 
 .dropdown-toggle::after {
@@ -104,7 +115,7 @@ h3{
 
 //dropdown menu
 .drop_menu{
-  margin-top: 10.5px;
+  margin-top: 22px;
   border-color: #368ee0;
 }
 .drop{
@@ -174,5 +185,30 @@ h3{
   font-weight: 500;
   padding-left: 15px;
 }
-
-
+.db_user{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+}
+.db_user_detail {
+  height: 15px;
+  width: 15px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: url(../../assets/img/db_user_detail.svg);
+}
+.db_password {
+  height: 35px;
+  width: 35px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: url(../../assets/img/db_password.svg);
+}
+.db_log_out {
+  height: 20px;
+  width: 20px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: url(../../assets/img/db_log_out.svg);
+}
