--- a/src/app/main/sidebar/sidebar.component.scss
+++ b/src/app/main/sidebar/sidebar.component.scss
@@ -168,10 +168,10 @@
           padding: 8px 30px 8px 20px;
           cursor: pointer;
 
-          i {
+          img {
             margin-right: 10px;
             font-size: 12px;
-            width: 30px;
+            width: 20px;
             height: 30px;
             line-height: 30px;
             text-align: center;
