--- a/src/app/login/forgot-password/forgot-password.component.html
+++ b/src/app/login/forgot-password/forgot-password.component.html
@@ -1,44 +1,40 @@
 <!DOCTYPE html>
 <html>
-<body>
-  <div class="container" style="background: white;">
-  <div class="row">
-    <div class="col-md-6">
-      <div class="bg"></div>
-    </div>
-    <div class="col-md-6">
-       <div class="d-flex flex-column"  style="height: 100vh;">
-          <form class="form-signin" [formGroup]="forgotPasswordForm" style="height: inherit;">
-            <div style="margin: 30px; color:#106DB6; font-size: 30px;">Quên mật khẩu</div>
-            <div style="margin: 30px; font-weight: 500;color: #8f8a8a;">Nhập địa chỉ email bạn đã sử dụng đăng ký trên MobiFone eContract</div>
+  <body>
+    <div class="container" style="background: white;">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="bg"></div>
+        </div>
+        <div class="col-md-6">
+          <div class="d-flex flex-column"  style="height: 100vh;">
+              <form class="form-signin" [formGroup]="forgotPasswordForm" style="height: inherit;">
+                <div class="header-label">Quên mật khẩu</div>
+                <div class="header-infor">Nhập địa chỉ email bạn đã sử dụng đăng ký trên MobiFone eContract</div>
 
-            <div class="form-group">
-              <div class="input-group">
-                <div class="input-group-prepend">
-                  <span class="input-group-text">
-                    <i class="fa fa-envelope" aria-hidden="true" style="color: #106DB6;"></i>
-                  </span>
+                <div class="form-group">
+                  <div class="input-line">
+                    <img src="../../../assets/img/login_email.svg" class="input-img">
+                    <input type="text" id="email" formControlName="email" class="input-text" placeholder="Nhập email"/>
+                  </div>
                 </div>
-                <input type="text" id="email" formControlName="email" class="form-control" placeholder="Nhập email"/>
-              </div>
-            </div>
 
-            <div class="form-group">
-              <p class="alert alert-danger" role="alert" *ngIf="error" style="text-align: center; font-size: 15px;">
-                <strong>{{errorDetail}}</strong>
-              </p>
-            </div>
+                <div class="form-group">
+                  <p class="alert alert-danger" role="alert" *ngIf="error" style="text-align: center; font-size: 15px;">
+                    <strong>{{errorDetail}}</strong>
+                  </p>
+                </div>
 
-            <div class="form-group" style="text-align: center;">
-              <button (click)="sendForgetPassword(); error ? false : open(mymodal)" class="btn btn-lg btn-block" style="background-color: #106DB6; color: white;">Gửi yêu cầu</button>
-            </div>
-          </form>
-          <div class="bg-footer-login"></div>
+                <div class="form-group" style="text-align: center;">
+                  <button (click)="sendForgetPassword(); error ? false : open(mymodal)" class="btn btn-lg btn-block" style="background-color: #106DB6; color: white;">Gửi yêu cầu</button>
+                </div>
+              </form>
+              <div class="bg-footer-login"></div>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
-</div>
-</body>
+  </body>
 </html>
 
 
