--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,82 +1,66 @@
 <!DOCTYPE html>
 <html>
-<body>
-  <div class="container" style="background: white;">
-  <div class="row">
-    <div class="col-md-6">
-      <div class="bg"></div>
-    </div>
+  <body>
+    <div class="container" style="background: white;">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="bg"></div>
+        </div>
 
-    <div class="col-md-6">
-      <div class="d-flex flex-column" style="height: 100vh;">
-         <div style="text-align: center;padding-top: 20px;">
-          <img src="../../assets/img/logo_eContract_21.svg" width="60%" /></div>
-         <form class="form-signin" [formGroup]="loginForm" style="height: inherit;">
-           <div class="form-group">
-             <div class="input-group">
-               <div class="input-group-prepend">
-                 <span class="input-group-text">
-                   <i class="fa fa-user" aria-hidden="true" style="color: #106DB6;"></i>
-                 </span>
-               </div>
-               <input
-                 type="text"
-                 id="username"
-                 class="form-control"
-                 placeholder="Tên đăng nhập"
-                 formControlName="username"
-               />
-             </div>
-           </div>
+        <div class="col-md-6">
+          <div class="d-flex flex-column" style="height: 100vh;">
+            <div class="bg-header">
+              <div class="bg-header-login"></div>
+            </div>
+            <form class="form-signin" [formGroup]="loginForm" style="height: inherit;">
+              <div class="form-group">
+                <div class="input-line">
+                  <img src="../../assets/img/login_user.svg" class="input-img">
+                  <input type="text" id="username" placeholder="Tên đăng nhập"
+                    formControlName="username" class="input-text"/>
+                </div>
+              </div>
 
-           <div class="form-group">
-             <div class="input-group">
-               <div class="input-group-prepend">
-                 <span class="input-group-text">
-                   <i class="fa fa-unlock-alt" aria-hidden="true" style="color: #106DB6;"></i>
-                 </span>
-               </div>
-               <input [type]="fieldTextType ? 'text' : 'password'"
-                 class="form-control" placeholder="Mật khẩu" formControlName="password"
-               />
-               <div class="input-group-append">
-                 <span class="input-group-text">
-                   <i class="fa"
-                     [ngClass]="{
-                       'fa-eye-slash': !fieldTextType,
-                       'fa-eye': fieldTextType
-                     }"
-                     (click)="toggleFieldTextType()"
-                     style="color: #106DB6;"
-                   ></i>
-                 </span>
-               </div>
-             </div>
-           </div>
+              <div class="form-group">
+                <div class="input-line">
+                  <img src="../../assets/img/login_password.svg" class="input-img">
+                  <input [type]="fieldTextType ? 'text' : 'password'"
+                    placeholder="Mật khẩu" formControlName="password" class="input-text"/>
+                  <div class="icon-password">
+                      <i class="fa"
+                        [ngClass]="{
+                          'fa-eye-slash': !fieldTextType,
+                          'fa-eye': fieldTextType
+                        }"
+                        (click)="toggleFieldTextType()"
+                        style="color: #106DB6;"
+                      ></i>
+                  </div>
+                </div>
+              </div>
 
-           <div class="form-group" style="text-align: right;">
-             <a href="/forgot-password" style="text-decoration: none; color: #7b7a7a;font-weight: 500;; cursor: pointer;">Quên mật khẩu?</a>
-           </div>
+              <div class="form-group forgot-password">
+                <a href="/forgot-password">Quên mật khẩu?</a>
+              </div>
 
-           <div class="form-group">
-             <p class="alert alert-danger" role="alert" *ngIf="error" style="text-align: center; font-size: 15px;">
-               <strong>{{errorDetail}}</strong>
-             </p>
-           </div>
+              <div class="form-group">
+                <p class="alert alert-danger" role="alert" *ngIf="error" style="text-align: center; font-size: 15px;">
+                  <strong>{{errorDetail}}</strong>
+                </p>
+              </div>
 
-           <div class="form-group" style="text-align: center;">
-             <button class="btn btn-lg btn-block" (click)="loginUser()">Đăng nhập</button>
-           </div>
+              <div class="form-group sub-login">
+                <button class="btn btn-lg btn-block" (click)="loginUser()">Đăng nhập</button>
+              </div>
 
-           <div class="form-group" style="text-align: center;">
-            <b>Bạn chưa có tài khoản?</b>&nbsp;<a href="#" style="text-decoration: none;color: #7b7a7a;font-weight: 500;">Đăng ký</a>
+              <div class="form-group sign-up">
+                <b>Bạn chưa có tài khoản?</b>&nbsp;<a href="#">Đăng ký</a>
+              </div>
+            </form>
+            <div class="bg-footer-login"></div>
           </div>
-         </form>
-
-         <div class="bg-footer-login"></div>
-     </div>
-   </div>
-  </div>
-</div>
-</body>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
