--- a/src/app/login/reset-password/reset-password.component.html
+++ b/src/app/login/reset-password/reset-password.component.html
@@ -13,41 +13,30 @@
             <div style="margin: 30px;font-weight: 500;color: #8f8a8a;">Nhập mật khẩu mới và xác nhận lại mật khẩu</div>
 
             <div class="form-group">
-              <div class="input-group">
-                <div class="input-group-prepend">
-                  <span class="input-group-text">
-                    <i class="fa fa-unlock-alt" aria-hidden="true" style="color: #106DB6;"></i>
-                  </span>
-                </div>
+              <div class="input-line">
+                <img src="../../assets/img/login_password.svg" class="input-img">
                 <input id="password" formControlName="password" [type]="fieldTextType ? 'text' : 'password'"
-                  class="form-control" placeholder="Mật khẩu mới"
+                class="input-text" placeholder="Mật khẩu mới"
                 />
-                <div class="input-group-append">
-                  <span class="input-group-text">
-                    <i class="fa"
-                      [ngClass]="{
-                        'fa-eye-slash': !fieldTextType,
-                        'fa-eye': fieldTextType
-                      }"
-                      (click)="toggleFieldTextType()"
-                      style="color: #106DB6;"
-                    ></i>
-                  </span>
+                <div class="icon-password">
+                  <i class="fa"
+                    [ngClass]="{
+                      'fa-eye-slash': !fieldTextType,
+                      'fa-eye': fieldTextType
+                    }"
+                    (click)="toggleFieldTextType()"
+                    style="color: #106DB6;"
+                  ></i>
                 </div>
               </div>
             </div>
 
             <div class="form-group">
-              <div class="input-group">
-                <div class="input-group-prepend">
-                  <span class="input-group-text">
-                    <i class="fa fa-unlock-alt" aria-hidden="true" style="color: #106DB6;"></i>
-                  </span>
-                </div>
+              <div class="input-line">
+                <img src="../../assets/img/login_password.svg" class="input-img">
                 <input id="confirmpassword" formControlName="confirmpassword" [type]="repeatFieldTextType ? 'text' : 'password'"
-                  class="form-control" placeholder="Xác nhận mật khẩu mới" />
-                <div class="input-group-append">
-                  <span class="input-group-text">
+                class="input-text" placeholder="Xác nhận mật khẩu mới" />
+                <div class="icon-password">
                     <i class="fa"
                       [ngClass]="{
                         'fa-eye-slash': !repeatFieldTextType,
@@ -56,7 +45,6 @@
                       (click)="toggleRepeatFieldTextType()"
                       style="color: #106DB6;"
                     ></i>
-                  </span>
                 </div>
               </div>
             </div>
