--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -54,7 +54,7 @@
               </div>
 
               <div class="form-group sign-up">
-                <b>Bạn chưa có tài khoản?</b>&nbsp;<a href="#">Đăng ký</a>
+                <b>Bạn chưa có tài khoản?</b>&nbsp;<a href="/signup">Đăng ký</a>
               </div>
             </form>
             <div class="bg-footer-login"></div>
