--- a/src/app/main/dashboard/dashboard.component.html
+++ b/src/app/main/dashboard/dashboard.component.html
@@ -1,25 +1,10 @@
-
-<section class="recent">
-  <div class="activity-grid">
-      <div class="activity-card">
-        <div style="overflow: auto;">
-          <ngx-charts-pie-chart
-            [view]="view"
-            [scheme]="colorScheme"
-            [results]="single"
-            [gradient]="gradient"
-            [legend]="showLegend"
-            [labels]="showLabels"
-            [legendTitle]="legendTitle"
-            [legendPosition]="legendPosition"
-            [arcWidth]="arcWidth"
-            [doughnut]="isDoughnut"
-            (select)="onSelect($event)"
-            (activate)="onActivate($event)"
-            (deactivate)="onDeactivate($event)"
-          >
-          </ngx-charts-pie-chart>
-        </div>
-      </div>
+<div class="row">
+  <div class="col-md-6">
+    <div [chart]="chart"></div>
   </div>
-</section>
+  <div class="col-md-5">
+    <div [chart]="chart2"></div>
+  </div>
+  <div class="col-md-1"></div>
+</div>
+
