--- a/src/app/main/contract/contract.component.scss
+++ b/src/app/main/contract/contract.component.scss
@@ -2,17 +2,21 @@
   border: 1px solid #1487E1;
   border-radius: 10px;
   padding: 8px;
-  margin-top: 10px;
+  margin-top: 5px;
   line-height: 24px;
 }
 
 .item_contract:hover{
-  background-color: rgb(250, 248, 248);
+  background-color: rgb(255, 254, 254);
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  cursor: pointer;
 }
 
 .item_contract_name {
   font-weight: 500;
+  font-size: 16px;
+  color: #106DB6;
+  text-decoration: underline;
 }
 
 .item_contract_infor{
@@ -59,10 +63,6 @@
 .input-group-text i{
   color: #106DB6;
 }
-.input-search{
-  height: 35px;
-  font-size: inherit;
-}
 .calendar_create{
   text-align: center;
   color:#106DB6
@@ -108,6 +108,26 @@
 .label_item{
   padding: 10px 0px 5px;
   color: #5e5e5e;
+}
+.search{
+  border: 1px solid #87CAFF;
+  border-radius: 15px;
+  height: 38px;
+}
+.input-line {
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+}
+.input-img {
+  padding: 10px;
+  cursor: pointer;
+}
+.input-text {
+  border: 0;
+  padding: 10px;
+  width: 100%;
+  outline:0px;
 }
 
 :host ::ng-deep {
